--- a/src/app/alveo/lists/items/docs/docs.component.html
+++ b/src/app/alveo/lists/items/docs/docs.component.html
@@ -1,20 +1,8 @@
-<ng-template #dataDownloadTemplate [ngIf]="this.isDownloadingData()" [ngIfElse]="selectionWaitTemplate">
-  <p class="center">Downloading data ...</p>
-</ng-template>
-
-<ng-template #selectionWaitTemplate>
-  <div *ngIf="this.getDocs() == null; else audioCheckTemplate">
-    <p class="center">Please select an item.</p>
-  </div>
-</ng-template>
-
-<ng-template #audioCheckTemplate>
-  <div *ngIf="this.getDocs().length == 0; else audioDisplayTemplate">
-    <p class="center">No audio documents were found in this item.</p>
-  </div>
+<ng-template #dataDownloadTemplate [ngIf]="this.getDocs().length === 0" [ngIfElse]="audioDisplayTemplate">
+  <p class="center">No audio documents were found in this item.</p>
 </ng-template>
 
 <ng-template #audioDisplayTemplate>
   <button mat-raised-button *ngFor="let doc of this.getDocs()" (click)="onSelect(doc)"
-              color="primary">{{this.shorten(doc['alveo:url'])}}</button>
+              color="primary">{{this.shortenUrl(doc['alveo:url'])}}</button>
 </ng-template>
