--- a/src/app/alveo/devconsole/devconsole.component.html
+++ b/src/app/alveo/devconsole/devconsole.component.html
@@ -1,9 +1,6 @@
 <div class="control-panel">
-  <h3>- Debugging Console -</h3><br>
-  <p>Data Controls</p>
-
+  <h4>Debug Mode</h4>
+  <h3>Database Console</h3><br>
   <button mat-raised-button color="primary" (click)="this.getData()">Refresh data via Alveo</button>
-  <button mat-raised-button color="primary" (click)="this.storeData()">Store Data</button>
-  <button mat-raised-button color="primary" (click)="this.reset()">Purge Loaded Data</button>
-  <button mat-raised-button color="primary" class="btn-large" (click)="this.resetStore()">Purge All Data</button>
+  <button mat-raised-button color="primary" class="btn-large" (click)="this.resetStore()">Purge cached data</button>
 </div>
