--- a/src/app/alveo/devconsole/devconsole.component.html
+++ b/src/app/alveo/devconsole/devconsole.component.html
@@ -1,6 +1,6 @@
 <div class="control-panel">
   <h4>Debug Mode</h4>
   <h3>Database Console</h3><br>
-  <button mat-raised-button color="primary" (click)="this.getData()">Refresh data via Alveo</button>
+  <button mat-raised-button color="primary" (click)="this.getData()">Refresh item lists (via API)</button>
   <button mat-raised-button color="primary" class="btn-large" (click)="this.resetStore()">Purge cached data</button>
 </div>
