Support session reset

--- a/src/app/alveo/devconsole/devconsole.component.html
+++ b/src/app/alveo/devconsole/devconsole.component.html
@@ -2,5 +2,6 @@
   <h4>Debug Mode</h4>
   <h3>Database Console</h3><br>
   <button mat-raised-button color="primary" (click)="this.getData()">Refresh item lists (via API)</button>
-  <button mat-raised-button color="primary" class="btn-large" (click)="this.resetStore()">Purge cached data</button>
+  <button mat-raised-button color="primary" class="btn-large" (click)="this.resetSession()">Reset session</button>
+  <button mat-raised-button color="primary" class="btn-large" (click)="this.resetStore()">Reset all data</button>
 </div>
