--- a/src/app/alveo/devconsole/devconsole.component.html
+++ b/src/app/alveo/devconsole/devconsole.component.html
@@ -1,7 +1,8 @@
 <div class="control-panel">
   <h4>Debug Mode</h4>
   <h3>Database Console</h3><br>
-  <button mat-raised-button color="primary" (click)="this.getData()">Refresh item lists (via API)</button>
+  <button mat-raised-button color="primary" (click)="this.refreshData()">Refresh item lists (via API)</button>
   <button mat-raised-button color="primary" class="btn-large" (click)="this.resetSession()">Reset session</button>
-  <button mat-raised-button color="primary" class="btn-large" (click)="this.resetStore()">Reset all data</button>
+  <button mat-raised-button color="primary" class="btn-large" (click)="this.deleteCache()">Delete Cache</button>
+  <button mat-raised-button color="primary" class="btn-large" (click)="this.deleteAnnotations()">Delete Annotations</button>
 </div>
