--- a/src/app/alveo/listindex/listtable/listtable.component.html
+++ b/src/app/alveo/listindex/listtable/listtable.component.html
@@ -27,7 +27,7 @@
   </mat-table>
 
   <mat-paginator #paginator
-                [length]="this.tableData.length"
+                [length]="this.getDataCount()"
                 [pageIndex]="0"
                 [pageSize]="25"
                 [pageSizeOptions]="[5, 10, 25, 100]">
