--- a/src/app/alveo/listindex/listtable/listtable.component.css
+++ b/src/app/alveo/listindex/listtable/listtable.component.css
@@ -1,4 +1,13 @@
+#search-field {
+  max-width: 30em;
+  width: 100%;
+  padding-right: 3em;
+  margin-left: auto;
+}
+
 #conftable {
+  display: flex;
+  flex-direction: column;
   max-width: 60em;
   margin: auto;
 }
