--- a/src/app/alveo/lists/items/items.component.css
+++ b/src/app/alveo/lists/items/items.component.css
@@ -1,3 +1,15 @@
+#item-display {
+  display: flex;
+  flex-direction: column;
+}
+
+#search-field {
+  max-width: 20em;
+  width: 100%;
+  padding-right: 3em;
+  margin-left: auto;
+}
+
 .mat-expansion-panel-header-description {
   text-align: right;
   display: block;
