--- a/src/app/alveo/datasource/datasource.component.css
+++ b/src/app/alveo/datasource/datasource.component.css
@@ -1,15 +1,21 @@
 #data-information {
   display: flex;
-  height: 100%;
-  text-align: center;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+  height: 80vh;
 }
+
+.dialogue {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+}
+
 .info-text {
   padding-bottom: 1em;
   max-width: 35em;
 }
+
 #download-button {
   font-size: 1.5em;
   padding: 0.25em 0.5em 0.25em 0.5em;
