Display only the first document, change routing mechanism

--- a/src/app/alveo/lists/items/docs/docs.component.css
+++ b/src/app/alveo/lists/items/docs/docs.component.css
@@ -1,5 +1,9 @@
+.button-aligner {
+  display: flex;
+}
+
 button {
-  width: 100%;
+  margin-left: auto;
   text-align: left;
   border-radius: 0;
   margin-bottom: 0.1em;
