Display annotation count

--- a/src/app/alveo/lists/items/docs/docs.component.html
+++ b/src/app/alveo/lists/items/docs/docs.component.html
@@ -1,4 +1,4 @@
-<p>Annotations: WIP</p>
+<p>Annotations: {{ this.getAnnotationCount() }}</p>
 <div class="button-aligner">
   <!-- If downloaded, else display "Download" -->
 <button mat-raised-button (click)="this.navigate()" color="primary">Transcribe</button>
