--- a/src/app/alveo/transcriber/transcriber.component.html
+++ b/src/app/alveo/transcriber/transcriber.component.html
@@ -1,3 +1,12 @@
+<loading-spinner *ngIf="!this.isReady() && !this.isError()">
+  <p>{{this.getLoadingText()}}</p>
+</loading-spinner>
+
+<div class="page-mid" *ngIf="this.isError()">
+  <p>An error has occurred.</p>
+  <button mat-raised-button color="primary" (click)="this.exit()">Back</button>
+</div>
+
 <annotator *ngIf="this.isReady()"
   [audioFile]="this.getAudioFile()"
   [audioFileName]="this.getIdentifier()"
@@ -5,7 +14,7 @@
   [selectedAnnotation]="this.getSelectedAnnotation()"
   [viewMode]="this.getViewMode()"
 
-  (onExit)="this.exit($event)"
+  (onExit)="this.exit()"
   (onAutosegment)="this.autoSegment($event)"
   (onSave)="this.saveAnnotations($event)"
 >
