Return doc/doc id on selection

--- a/src/app/alveo/lists/items/docs/docs.component.html
+++ b/src/app/alveo/lists/items/docs/docs.component.html
@@ -1,5 +1,5 @@
 <p>Annotations: {{ this.getAnnotationCount() }}</p>
 <div class="button-aligner">
   <!-- If downloaded, else display "Download" -->
-<button mat-raised-button (click)="this.navigate()" color="primary">Transcribe</button>
+<button mat-raised-button (click)="this.select()" color="primary">Transcribe</button>
 </div>
