Handle routing for doc selection

--- a/src/app/alveo/lists/lists.component.html
+++ b/src/app/alveo/lists/lists.component.html
@@ -11,7 +11,7 @@
     </ng-template>
 
     <ng-template #listLoadingTemplate>
-      <items [itemUrls]="this.getListItems()"></items>
+      <items [itemUrls]="this.getListItems()" (onSelect)="this.transcribe($event)"></items>
     </ng-template>
   </div>
 </div>
