--- a/src/app/alveo/lists/items/docs/docs.component.css
+++ b/src/app/alveo/lists/items/docs/docs.component.css
@@ -12,3 +12,12 @@ button {
 button:hover {
   opacity: 0.6;
 }
+
+.audio-channel {
+  display: flex;
+  justify-content: right;
+  align-items: center;
+}
+.audio-channel p {
+  margin-right: 0.30em;
+}
