--- a/src/app/alveo/lists/items/docs/docs.component.html
+++ b/src/app/alveo/lists/items/docs/docs.component.html
@@ -1,5 +1,14 @@
 <p>Annotations: {{ this.getAnnotationCount() }}</p>
+<div class="audio-channel">
+  <p>Use audio channel: </p>
+  <mat-form-field id="doc-source">
+    <mat-select [(ngModel)]="this.selectedDoc">
+      <mat-option *ngFor="let doc of this.docs" [value]="doc">{{doc['dcterms:identifier']}}</mat-option>
+    </mat-select>
+  </mat-form-field>
+</div>
 <div class="button-aligner">
   <!-- If downloaded, else display "Download" -->
 <button mat-raised-button (click)="this.select()" color="primary">Transcribe</button>
 </div>
+
