Support inputs for annotator buttons and autoplay

--- a/src/app/alveo/transcriber/transcriber.component.html
+++ b/src/app/alveo/transcriber/transcriber.component.html
@@ -16,6 +16,11 @@
     [selectedAnnotation]="this.getSelectedAnnotation()"
     [viewMode]="this.getViewMode()"
 
+    [showSegmentorServiceButton]="true"
+    [showCSVExportButton]="true"
+    [showJSONExportButton]="true"
+    [autoplayDefault]="true"
+
     (onExit)="this.exit()"
     (onAutosegment)="this.autoSegment($event)"
     (onSave)="this.saveAnnotations($event)"
