Support segmentor service spinner and status

--- a/src/app/alveo/transcriber/transcriber.component.html
+++ b/src/app/alveo/transcriber/transcriber.component.html
@@ -21,6 +21,8 @@
     [showJSONExportButton]="true"
     [autoplayDefault]="true"
 
+    [segmentorWorking]="this.isSegmenting" 
+
     (onExit)="this.exit()"
     (onAutosegment)="this.autoSegment($event)"
     (onSave)="this.saveAnnotations($event)"
