--- a/src/app/alveo/error-notify/error-notify.component.html
+++ b/src/app/alveo/error-notify/error-notify.component.html
@@ -1,1 +1,5 @@
-displaying {{ data.message }}
+<div class="divider">
+  <p id="header">Error<p>
+  <p id="message">{{data.message}}</p>
+  <p id="close" (click)="this.close(data)">Close</p>
+</div>
