Support dismissing error notifications

--- a/src/app/alveo/error-notify/error-notify.component.html
+++ b/src/app/alveo/error-notify/error-notify.component.html
@@ -1,5 +1,5 @@
 <div class="divider">
   <p id="header">Error<p>
   <p id="message">{{data.message}}</p>
-  <p id="close" (click)="this.close(data)">Close</p>
+  <p id="close" (click)="this.dismiss()">Close</p>
 </div>
