--- a/src/app/alveo/error-notify/error-notify.component.html
+++ b/src/app/alveo/error-notify/error-notify.component.html
@@ -1,5 +1,5 @@
 <div class="divider">
-  <p id="header">Error<p>
+  <mat-icon id="header">error</mat-icon>
   <p id="message">{{data.message}}</p>
-  <p id="close" (click)="this.dismiss()">Close</p>
+  <mat-icon id="close" (click)="this.dismiss()">close</mat-icon>
 </div>
