Correctly refer to name as identifier

--- a/src/app/alveo/lists/items/items.component.html
+++ b/src/app/alveo/lists/items/items.component.html
@@ -5,7 +5,7 @@
   <mat-expansion-panel *ngFor="let item of this.getItems()" (click)="onItemSelection(item)">
     <mat-expansion-panel-header>
       <mat-panel-title>
-        {{this.getItemName(item)}}
+        {{this.getItemIdentifier(item)}}
       </mat-panel-title>
       <mat-panel-description>
         {{this.getItemState(item)}}
