--- a/src/app/alveo/lists/items/docs/docs.component.html
+++ b/src/app/alveo/lists/items/docs/docs.component.html
@@ -1,17 +1,5 @@
-<div *ngIf="this.getDocumentCount() === 0">
-  <p>There are no audio documents on this item to work with.</p>
-</div>
-<div *ngIf="this.getDocumentCount() > 0">
-  <p>Annotations: {{ this.getAnnotationCount() }}</p>
-  <div class="audio-channel">
-    <p>Use audio channel: </p>
-    <mat-form-field id="doc-source">
-      <mat-select [(ngModel)]="this.selectedDoc">
-        <mat-option *ngFor="let doc of this.docs" [value]="doc">{{doc['dcterms:identifier']}}</mat-option>
-      </mat-select>
-    </mat-form-field>
-  </div>
-  <div class="button-aligner">
-    <button mat-raised-button (click)="this.select()" color="primary">Transcribe</button>
-  </div>
-</div>
+<mat-form-field>
+  <mat-select [(ngModel)]="this.selectedDoc">
+    <mat-option (onSelectionChange)="this.docSelect($event, doc)" *ngFor="let doc of this.docs" [value]="doc">{{doc['dcterms:identifier']}}</mat-option>
+  </mat-select>
+</mat-form-field>
