Rename Docs component to SourceSelect

--- a/src/app/alveo/lists/items/items.component.html
+++ b/src/app/alveo/lists/items/items.component.html
@@ -16,6 +16,7 @@
     </item>
 
     <item-loader *ngIf="!this.isDataReady(item)"
+      (click)="this.onItemSelection(item)"
       [identifier]="item['id']"
       [state]="item['state']">
     </item-loader>
