--- a/src/app/alveo/lists/items/item/item.component.html
+++ b/src/app/alveo/lists/items/item/item.component.html
@@ -17,7 +17,10 @@
 
     <div class="audio-channel">
       <p>Use audio channel: </p>
-      <docs [docs]="this.getDocuments()" (onSelectedDocChange)="selectedDoc=$event"></docs>
+      <source-select
+        [sources]="this.getDocuments()"
+        (onSelectedSourceChange)="selectedSource=$event">
+      </source-select>
     </div>
 
     <div class="button-aligner">
