Use better auto play bindings

--- a/src/app/alveo/transcriber/transcriber.component.html
+++ b/src/app/alveo/transcriber/transcriber.component.html
@@ -23,7 +23,7 @@
       [showSegmentorServiceButton]="true"
       [showCSVExportButton]="true"
       [showJSONExportButton]="true"
-      [autoplayDefault]="true"
+      [autoPlay]="true"
 
       [segmentorWorking]="this.isSegmenting" 
 
