--- a/src/app/alveo/transcriber/transcriber.component.css
+++ b/src/app/alveo/transcriber/transcriber.component.css
@@ -9,3 +9,14 @@
 .page-mid p {
   margin-bottom: 1em;
 }
+#header {
+  flex: 1 1 100%;
+  font-size: 24px;
+  vertical-align: middle;
+  padding-bottom: 2px;
+
+  text-align: center;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
