Handle 401s and 403s, support error text without using displayError

--- a/src/app/alveo/transcriber/transcriber.component.html
+++ b/src/app/alveo/transcriber/transcriber.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="this.errorRaised" class="page-mid">
-  <p>An error has occurred.</p>
+  <p>{{this.getLoadingText()}}</p>
   <button mat-raised-button color="primary" (click)="this.exit()">Back</button>
 </div>
 
