--- a/src/app/alveo/loading-spinner/loading-spinner.component.html
+++ b/src/app/alveo/loading-spinner/loading-spinner.component.html
@@ -1,4 +1,6 @@
 <div class="container" [class.pageFill]="this.usePageFill()">
   <mat-spinner [diameter]="this.getSpinnerDiameter()"></mat-spinner>
-  <ng-content></ng-content>
+  <div id="content" [class.spacer]="!this.inline">
+    <ng-content ></ng-content>
+  </div>
 </div>
