Style the not ready items

--- a/src/app/alveo/lists/items/item-loader/item-loader.component.html
+++ b/src/app/alveo/lists/items/item-loader/item-loader.component.html
@@ -1,7 +1,12 @@
-<loading-spinner [spinnerSize]="'small'" *ngIf="state !== 'Failed'">
-  <p>Downloading data</p>
-</loading-spinner>
-
-<p *ngIf="state === 'Failed'">
-  The item could not be downloaded.
-</p>
+<mat-expansion-panel [disabled]="true">
+  <mat-expansion-panel-header>
+    <mat-panel-title>
+      {{this.identifier}}
+    </mat-panel-title>
+    <mat-panel-description>
+      {{this.state}}
+      <loading-spinner [spinnerSize]="'tiny'" [inline]="true" *ngIf="state === 'Downloading'">
+      </loading-spinner>
+    </mat-panel-description>
+  </mat-expansion-panel-header>
+</mat-expansion-panel>
