Fix compile issues

--- a/src/app/alveo/lists/items/item/item.component.html
+++ b/src/app/alveo/lists/items/item/item.component.html
@@ -1,7 +1,7 @@
 <mat-expansion-panel>
   <mat-expansion-panel-header>
     <mat-panel-title>
-      {{this.getItemIdentifier(item)}}
+      {{this.getItemIdentifier()}}
     </mat-panel-title>
     <mat-panel-description>
       Ready
