Add item list and alveo app server url

--- a/src/app/alveo/nav/nav.component.html
+++ b/src/app/alveo/nav/nav.component.html
@@ -5,6 +5,8 @@
   </a>
 
   <div class="flex-left">
+    <a href="javascript:void(0)" (click)="this.goIndex()">Item Lists</a>
+    <a href="javascript:void(0)" (click)="this.goAlveoVL()">Alveo Virtual Laboratory</a>
     <a href="https://github.com/Alveo/alveo-transcriber">GitHub</a>
     <a href="https://github.com/Alveo/alveo-transcriber/wiki" target="_blank">Help</a>
   </div>
