Upgrade to @alveo/angular-transcriber

--- a/src/app/alveo/transcriber/transcriber.component.html
+++ b/src/app/alveo/transcriber/transcriber.component.html
@@ -14,7 +14,7 @@
   <div *ngIf="this.isReady()">
     <p id="header">Transcribing: {{ this.getIdentifier() }}</p>
     <h5 class="center">Channel: {{ this.doc_id }}</h5>
-    <annotator
+    <avl-ngt-transcriber
       [audioFile]="this.getAudioFile()"
       [audioFileName]="this.getIdentifier()"
       [annotations]="this.getAnnotations()"
@@ -28,9 +28,9 @@
 
       [segmentorWorking]="this.isSegmenting" 
 
-      (onExit)="this.exit()"
-      (onAutosegment)="this.autoSegment($event)"
-      (onSave)="this.saveAnnotations($event)">
-    </annotator>
+      (exit)="this.exit()"
+      (autosegment)="this.autoSegment($event)"
+      (save)="this.saveAnnotations($event)">
+    </avl-ngt-transcriber>
   </div>
 </div>
